<resources>
    <string name="app_name">Adutucart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_cart">Shop Cart</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="smooth_bottom_bar">Smooth Bottom Bar</string>
    <string name="cart_fragment">Cart Fragment</string>
    <string name="more_fragment">My Dashboard</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="see_all">See all</string>
    <string name="shop_by_products">Shop by Products</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="store">Store</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>